Fixed a bunch of layout bugs, added companies' industries and websites to the single vacancy page

--- a/src/components/layers/fullVacancy/styles.scss
+++ b/src/components/layers/fullVacancy/styles.scss
@@ -16,3 +16,21 @@ a.btn {
     background-color: $telegram;
   }
 }
+
+span.website {
+  &:before {
+    content: "•";
+    margin: 0 7px;
+  }
+  
+  & a {
+    color: $warmText;
+    border-bottom-color: rgba(251,249,222,.4);
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+
+    &:hover {
+      border-bottom: none;
+    }
+  }
+}
